--- a/_posts/2017-03-09-buzzer.md
+++ b/_posts/2017-03-09-buzzer.md
@@ -1,28 +1,22 @@
 ---
 layout: post
-title: "Arduino / O02 / 自激式蜂鳴器"
+title: "Arduino / I01 / 按壓開關"
 date: 2017-03-09 00:00:05
-description: "自激式的蜂鳴器是將驅動線路直接設計到蜂鳴器中，故只需給予直流電壓，內含的驅動線路，就會產生設計好的頻率及電壓給蜂鳴器發聲，所以自激式的頻率是固定的。"
+description: "按壓開關 (Push button) 是一個常開按鈕，不按壓時為開路不連通(OFF)，按壓時形成短路連通(ON)。"
 main-class: 'arduino'
-color: '#EB7728'
+color: '#637a91'
 tags:
 - "Arduino"
-- "Output"
-twitter_text: "Arduino / O02 / 自激式蜂鳴器"
-introduction: "自激式的蜂鳴器是將驅動線路直接設計到蜂鳴器中，故只需給予直流電壓，內含的驅動線路，就會產生設計好的頻率及電壓給蜂鳴器發聲，所以自激式的頻率是固定的。"
+- "Input"
+twitter_text: "Arduino / I01 / 按壓開關"
+introduction: "按壓開關 (Push button) 是一個常開按鈕，不按壓時為開路不連通(OFF)，按壓時形成短路連通(ON)。"
 ---
 
-## 自激式與他激式蜂鳴器的差別
-
-依照驅動信號的不同，蜂鳴器分為自激式及他激式二類，有很多不同說法，但指的都是這二種分類，如:內含(不含)線路,直流DC/交流AC Type, 有源(無源)等。
-
-自激式的蜂鳴器是將驅動線路直接設計到蜂鳴器中，故只需給予直流電壓，內含的驅動線路，就會產生設計好的頻率及電壓給蜂鳴器發聲，所以自激式的頻率是固定的。
-
-而他激式的蜂鳴器，需由外部線路給予1/2方波V 0-p(電磁式)，或方波Vp-p(壓電式)的信號，才會發聲。
+我們利用按壓開關按下時回傳給 Arduino 板子的訊號，做為觸發輸出端改變的判斷，以下的電路示意與第一段程式碼，示範情境為：按下按壓開關則點亮主板內建 LED，放開按壓開關則關閉主板內建 LED
 
 ## 電路示意圖
 
-![Buzzer Circuit](https://cdn.sparkfun.com/r/600-600/assets/learn_tutorials/3/1/0/Arduino_circuit_11_01.png)
+![PushButton Circuit](https://www.arduino.cc/en/uploads/Tutorial/inputPullupButton.png)
 
 ## 範例程式
 
