--- a/_posts/2017-03-09-HC-SR04.md
+++ b/_posts/2017-03-09-HC-SR04.md
@@ -16,7 +16,7 @@ introduction: "超音波測距傳感器。"
 
 ## 電路示意圖
 
-![PushButton Circuit](https://www.arduino.cc/en/uploads/Tutorial/inputPullupButton.png)
+![PushButton Circuit](/freakhq/assets/img/posts/I02-1.png)
 
 ## 範例程式
 
