--- a/_posts/2017-03-09-HC-SR04.md
+++ b/_posts/2017-03-09-HC-SR04.md
@@ -12,7 +12,13 @@ twitter_text: "Arduino / I02 / 超音波測距傳感器"
 introduction: "超音波測距傳感器。"
 ---
 
-我們利用按壓開關按下時回傳給 Arduino 板子的訊號，做為觸發輸出端改變的判斷，以下的電路示意與第一段程式碼，示範情境為：按下按壓開關則點亮主板內建 LED，放開按壓開關則關閉主板內建 LED
+## 傳感器規格
+* 型號：HC-SR04
+* 探測的距離 : 2cm-400cm
+* 精度 : 0.3 cm
+* 感應角度 : 15 度
+* VCC : 5V
+
 
 ## 電路示意圖
 
