--- a/_posts/2017-03-09-HC-SR04.md
+++ b/_posts/2017-03-09-HC-SR04.md
@@ -2,15 +2,21 @@
 layout: post
 title: "Arduino / I02 / 超音波測距傳感器"
 date: 2017-03-09 00:00:05
-description: "超音波測距傳感器。"
+description: "超音波測距傳感器是由超音波發射器、接收器和控制電路所組成。當它被觸發的時候，會發射一連串 40 kHz 的聲波並且從離它最近的物體接收回音。"
 main-class: 'arduino'
 color: '#D6BA32'
 tags:
 - "Arduino"
 - "Input"
 twitter_text: "Arduino / I02 / 超音波測距傳感器"
-introduction: "超音波測距傳感器。"
+introduction: "超音波測距傳感器是由超音波發射器、接收器和控制電路所組成。當它被觸發的時候，會發射一連串 40 kHz 的聲波並且從離它最近的物體接收回音。"
 ---
+
+超音波測距傳感器是由超音波發射器、接收器和控制電路所組成。當它被觸發的時候，會發射一連串 40 kHz 的聲波並且從離它最近的物體接收回音。
+
+## 電路示意圖
+
+![PushButton Circuit](/freakhq/assets/img/posts/I02-1.png)
 
 ## 傳感器規格
 * 型號：HC-SR04
@@ -18,11 +24,6 @@ introduction: "超音波測距傳感器。"
 * 精度 : 0.3 cm
 * 感應角度 : 15 度
 * VCC : 5V
-
-
-## 電路示意圖
-
-![PushButton Circuit](/freakhq/assets/img/posts/I02-1.png)
 
 ## 範例程式
 
