--- a/_posts/2017-03-09-DHT11.md
+++ b/_posts/2017-03-09-DHT11.md
@@ -86,7 +86,7 @@ void loop()
 6. 如果高電平持續 26~28 μs，代表 '0'; 如果高電平持續 70μs，代表 '1'。
 7. DHT11 反饋低電平 50μs，標誌第一個 bit 馬上就要輸出了
 8. 如果高電平持續 26~28 μs，代表 '0'; 如果高電平持續 70μs，代表 '1'。
-................... 一共會輸出 40 個 bit
+............. 一共會輸出 40 個 bit
 
 
 ## 參考資料
