--- a/_posts/2017-03-09-DHT11.md
+++ b/_posts/2017-03-09-DHT11.md
@@ -83,9 +83,9 @@ void loop()
 3. DHT11 反饋低、高電平各 80μs
 4. DHT11 反饋低、高電平各 80μs
 5. DHT11 反饋低電平 50μs，標誌第一個 bit 馬上就要輸出了
-6. 如果高電平持續 26~28 μs，代表 '0'; 如果高電平持續 70μs，代表 '1'。
+6. 如果高電平持續 26~28 μs，代表 '0'; 如果高電平持續 70μs，代表 '1'
 7. DHT11 反饋低電平 50μs，標誌第一個 bit 馬上就要輸出了
-8. 如果高電平持續 26~28 μs，代表 '0'; 如果高電平持續 70μs，代表 '1'。
+8. 如果高電平持續 26~28 μs，代表 '0'; 如果高電平持續 70μs，代表 '1'
 
 ..(5,6,7,8 的動作一共會輸出 40 個 bit)..
 
