--- a/_posts/2017-03-09-VR.md
+++ b/_posts/2017-03-09-VR.md
@@ -38,7 +38,7 @@ void loop() {
   Serial.println(sensorValue, DEC);
   
   sensorValue = sensorValue/4; // convert from 0-1024 to 0-255
-  // 或者用 map 函數
+  // 或者用 map 函數 map(value, fromLow, fromHigh, toLow, toHigh)
   // sensorValue = map(sensorValue, 0, 255, 0, 1023);
 
   analogWrite(ledPin, sensorValue);
