--- a/_posts/2017-03-09-BigSound.md
+++ b/_posts/2017-03-09-BigSound.md
@@ -39,4 +39,4 @@ void loop() {
 
 ## 思考練習
 
-請實作，設定一個臨界值，當 analogRead() 進來的數值大於該臨界值時，點亮 LED。
+依照上方的電路圖接上 LED，並請實作，設定一個臨界值，當 analogRead() 進來的數值大於該臨界值時，點亮 LED。
