--- a/_posts/2017-03-09-3colorled.md
+++ b/_posts/2017-03-09-3colorled.md
@@ -137,4 +137,8 @@ void breath(int ledNums) {
 
 ## 思考練習
 
-程式碼二中，其三色輪動的效果是 1 -> 2 -> 3 -> 1 -> 2 -> 3...，若我們想改為來回的方式輪動顏色 1 -> 2 -> 3 -> 2 -> 1 -> 2 -> 3...，應該如何修改程式碼呢？請試著實作看看。
+* 程式碼二中，其三色輪動的效果是 1 -> 2 -> 3 -> 1 -> 2 -> 3...，若我們想改為來回的方式輪動顏色 1 -> 2 -> 3 -> 2 -> 1 -> 2 -> 3...，應該如何修改程式碼呢？請試著實作看看。
+
+* 請參考下圖，實作來回閃爍燈效果
+
+![7LEDs](/freakhq/assets/img/posts/7LEDs.jpg)
