--- a/_posts/2017-03-11-PIR.md
+++ b/_posts/2017-03-11-PIR.md
@@ -36,12 +36,10 @@ void setup()
 void loop()
 {
   int val=digitalRead(PIRPIN);
-  if (val==HIGH) {
+  if (val==HIGH) { //若有人體通過偵測到時
     Serial.println(val);
-    //若有人體通過偵測到時
-  } else {
+  } else { //沒有偵測到時
     Serial.println(val);
-    //沒有偵測到時
   }
 }
 
